[package]
name = "rust-chat-app"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
crossterm = "0.27.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
